mod supervisord conf

--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -1,14 +1,6 @@
 [supervisord]
 nodaemon = true
 
-[program:influxdb]
-priority = 2
-command = bash -c "/etc/init.d/influxdb start && sleep 5"
-
-[program:chronograf]
-priority = 2
-command = bash -c "/usr/bin/chronograf start"
-
 [program:grafana]
 priority = 3
-command = /etc/init.d/grafana-server start
+command = java -mx4g -cp "CoreNLP/*" edu.stanford.nlp.pipeline.StanfordCoreNLPServer -preload tokenize,ssplit,pos,lemma,ner,parse,depparse -status_port 9000 -port 9000 -timeout 15000
